fix window icons causing overflows by shrinking them to fit within taskbar

--- a/src/components/Taskbar.module.css
+++ b/src/components/Taskbar.module.css
@@ -26,6 +26,7 @@
   border-bottom: 1px solid grey;
   box-shadow: inset 1px 1px #dfdfdf, 1px 0 black, 0 1px black, 1px 1px black;
   font-weight: bold;
+  min-width: fit-content;
 }
 
 .taskbar_startButton_icon {
@@ -35,16 +36,20 @@
 
 .taskbar_windowIcons {
   display: flex;
+  background-color: red;
+  margin: 0 4px;
+  overflow: hidden;
 }
 
 .taskbar_windowIcon {
-  width: 10em;
   display: flex;
   align-items: center;
+  flex-shrink: 1;
+  overflow-x: hidden;
 }
 
 .taskbar_windowIcon_icon {
-  height: 100%;
+  height: 80%;
 }
 
 .taskbar_windowIcon_text {
@@ -52,8 +57,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 0.75rem;
+  line-height: 1.5rem;
 }
 
 .taskbar_datetime {
   margin-left: auto;
+  min-width: fit-content;
 }
